<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Program.ProgramEnergyActivity"
    android:background="@drawable/gradient_background">


    <ListView
        android:id="@+id/listView_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/return2main"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shadow"
        android:elevation="5dp"
        android:padding="5dp" />


    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleBCIT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/titleTimeTable"
                android:fontFamily="@font/montserrat_black"
                android:text="BCIT"
                android:textColor="#14406b"
                android:textSize="31dp" />

            <TextView
                android:id="@+id/titleTimeTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/montserrat_semibold"
                android:text="TIMETABLE"
                android:textColor="#14406b"
                android:textSize="30dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/searchFilter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Search Program" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/return2main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btntxtReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnEnergy"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="RETURN BACK TO MAIN"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnReturn2Main"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#016993"
            android:fontFamily="@font/montserrat_black"
            android:text="Return"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>


</RelativeLayout>

