<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".webView.webViewerActivity"
    android:background="@drawable/gradient_background">

    <WebView
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:id="@+id/webViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/return2main"
        android:layout_marginBottom="0dp"/>

    <LinearLayout
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:id="@+id/return2main"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReturn2Main"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="#016993"
            android:fontFamily="@font/montserrat_black"
            android:text="Return back to main"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnQR"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="#14406b"
            android:drawableRight="@drawable/ic_qr_code"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
    </LinearLayout>

</RelativeLayout>