...
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Return_btn"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="#016993"
            android:fontFamily="@font/montserrat_black"
            android:text="Return back to main"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Share_btn"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="#14406b"
            android:drawableRight="@drawable/ic_share"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
...
