...
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnInstructor"
            android:text="Instructors"
            android:layout_below="@+id/btnPrograms"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
...
